# jans

./: .replit  pyproject.toml  replit.md
.github/: maven-settings.xml
.github/workflows/: build-packages.yml  full-rebuild.yml
agama/: pom.xml
automation/: startjanssenmonolithdemo.sh
docker-jans-monolith/: Dockerfile
docker-jans-monolith/scripts/: entrypoint.sh
jans-auth-server/: pom.xml
jans-auth-server/agama/engine/: pom.xml
jans-bom/: pom.xml
jans-casa/: pom.xml
jans-casa/app/: pom.xml
jans-casa/app-fips/: pom.xml
jans-casa/plugins/acct-linking/: pom.xml
jans-casa/plugins/bioid/: pom.xml
jans-casa/plugins/client-authorizations/: pom.xml
jans-casa/plugins/custom-branding/: pom.xml
jans-casa/plugins/email_2fa_core/: pom.xml
jans-casa/plugins/strong-authn-settings/: pom.xml
jans-config-api/: pom.xml
jans-core/: pom.xml
jans-fido2/: pom.xml
jans-keycloak-integration/: pom.xml
jans-keycloak-integration/job-scheduler/: pom.xml
jans-keycloak-link/: pom.xml
jans-link/: pom.xml
jans-link/server/: pom.xml
jans-link/server-fips/: pom.xml
jans-link/service/: pom.xml
jans-linux-setup/jans_setup/: app_info.json
jans-lock/lock-master/: pom.xml
jans-orm/: pom.xml
jans-scim/: pom.xml
