[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "babel>=2.17.0",
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "gitpython>=3.1.45",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "markdown>=3.10",
    "mdx-truly-sane-lists>=1.3",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.19.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "watchdog>=6.0.0",
]
